--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Platzigram</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Oleo+Script" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+  <section id="main-container">
+    <div class="contaniner">
+      <div class="row">
+        <div class="col s10 push-s1">
+          <div class="row">
+            <div class="col m5 hide-on-small-only">
+              <img class="impPortada" src="img/imgPortada.jpeg" alt="">
+            </div>
+            <div class="col s12 m7">
+              <div class="row">
+                <div class="singup-box">
+                  <h1 class="platzigram">Platzigram</h1>
+                  <form class="signup-form">
+                      <h2>Registrate para ver fotos de tus amigos estudiantes en platzi</h2>
+                      <div class="section">
+                        <a class="btn btn-fb hiden-on-small-only">Inicia session en Facebook </a>
+                        <a class="btn btn-fb hide-on-med-and-up">Inicia session </a>
+                      </div>
+                      <div class="section">
+                        <input type="email" name="email" placeholder="Correo Electronico">
+                        <input type="text" name="name" placeholder="Nombre Completo">
+                        <input type="text" name="username" placeholder="Nombre de Usuario">
+                        <input type="password" name="passwword" placeholder="Contraseña">
+                        <button class="btn waves-effect waves-ligth btn-singup" type="submit">Registrate</button>
+                      </div>
+                  </form>
+                </div>
+              </div>
+              <div class="row">
+                <div class="login-box">
+                  ¿Tienes una cuenta? <a href="/signin">Entrar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 l3 center-align">
+          <a class="dropdown-button btn btn-flat" href="#" data-activates="dropdown1">Idioma</a>
+          <ul id="dropdown1" class="dropdown-content">
+              <li><a href="#">Español</a></li>
+              <li><a href="#">Ingles</a></li>
+          </ul>
+        </div>
+        <div class="col s12 l3 push-l6 center-align">
+          © 2017 KAAMEHOUSE
+         </div>
+      </div>
+    </div>
+  </footer>
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
- 
 </body>
 </html>
