--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta charset="utf-8"/>
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="public/app.css">
 </head>
 <body>
   <section id="main-container">
@@ -16,7 +16,7 @@
         <div class="col s10 push-s1">
           <div class="row">
             <div class="col m5 hide-on-small-only">
-              <img class="impPortada" src="img/imgPortada.jpeg" alt="">
+              <img class="impPortada" src="public/imgPortada.jpeg" alt="">
             </div>
             <div class="col s12 m7">
               <div class="row">
