--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta charset="utf-8"/>
-  <link rel="stylesheet" href="public/app.css">
+  <link rel="stylesheet" href="app.css">
 </head>
 <body>
   <section id="main-container">
